--- a/src/style.module.css
+++ b/src/style.module.css
@@ -31,6 +31,7 @@
       justify-content: center;
       flex-direction: column;
       text-align: left;
+      margin: 30px;
     }
     
     .inner {
@@ -84,7 +85,7 @@
       }
   button{
     width: 100%;
-    background-color: #4CAF50;
+    background-color: #4c87af;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -93,3 +94,31 @@
     cursor: pointer;
   }
   
+  @media screen and (max-width: 600px) {
+    button{
+      width: 100%;
+      background-color: #4c87af;
+      color: white;
+      margin: 3px 0;
+      border: none;
+      border-radius: 1px;
+    }
+    input {
+      width: 100%;
+      padding: 6px 12px;
+      margin: 7px 7px;
+      display: block;
+      border: 1px solid #ccc;
+      border-radius: 2px;
+      box-sizing: border-box;
+    }
+    .inner {
+      width: 250px;
+      margin: auto;
+      background: #ffffff;
+      box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+      padding: 40px 55px 45px 55px;
+      border-radius: 15px;
+      transition: all .3s;
+    }
+  }
